--- a/cv.css
+++ b/cv.css
@@ -1,31 +1,48 @@
+
+@font-face{
+font-family: "GOTHIC";   
+src:url("/Users/annakursanova11/Desktop/CV/shrift/GOTHIC.TTF")format("truetype"); 
+  
+font-style: normal; 
+font-weight: normal; 
+}
+
+div{
+    font-family: "GOTHIC";
+    color:#434244;
+}
+
 .cv{
-	margin-left: 25px;
-	margin-right: 25px;
-	border-bottom: 10px solid #800080;
+	margin-left: 122px;
+	margin-right: 122px;
+	border-bottom: 10px solid #e8c734;
 	border-radius: 7px;
+    
 }
 
 .block-title{
-	border-bottom: 2px solid #800080;
+	border-bottom: 2px solid #a5a5a6;
 	padding: 1px;
 }
 
 .name{
 color: #000000;
-font-size: 25px; /*размер текста*/
-margin-bottom: 2px;
+font-size: 30px; /*размер текста*/
+margin-bottom: 32px;
 
 }
 
 .tester {
 	font-size: 20px;
 	color: #808080;
+    margin-bottom: 50px;
 	
 }
 
 .inf {
 	font-size: 15px;
 	color: #808080;
+    margin-bottom: 23px;
 }
 
 
@@ -33,88 +50,90 @@ margin-bottom: 2px;
 	border-radius: 3px;
 	width: 300px;
 	margin-top:20px;
-	display:line-block;
+	display:inline-block;
 	
 }
 
-.aboutMe{
-	border;
-	background-color: #464451;
-	margin-top: 100px;
-	margin-left: 30px;
-	margin-left: 20px;
-}
 
 
 .border{
 	border-radius: 5px;
-	border: 1px solid black;
+	border: 1px solid #e4e4e5;
 	width: 200px;
 	margin-bottom: 30px;
 }
 
-.bgBorderCo{
-	border:5px solid #FF7F50;
+.border-border_co{
+    
+	border:5px solid #bbbcbe;
 	width: 170px;
 }
 
 
-.bgBorderCr{
-	border:5px solid #FF7F50;
+.border-border_cr{
+	border:5px solid #bbbcbe;
 	width: 180px;
 }
 
-.bgBorderTm{
-	border:5px solid #FF7F50;
+.border-border_tm{
+	border:5px solid #bbbcbe;
 	width: 150px;
 }
 
-.bgBorderOr{
-	border:5px solid #FF7F50;
+.border-border_or{
+	border:5px solid #bbbcbe;
 	width: 185px;
 }
 
-.bgBorderLe{
-	border:5px solid #FF7F50;
+.border-border_le{
+	border:5px solid #bbbcbe;
 	width: 165px;
 }
 
-.bgBorderTe{
-	border:5px solid #FF7F50;
+.border-border_te{
+	border:5px solid #bbbcbe;
 	width: 150px;
 }
 
 
 
-.bgBorderMth{
-	border:5px solid #FF7F50;
+.border-border_mth{
+	border:5px solid #bbbcbe;
 	width: 190px;
 }
 
-.content{
+.block-bar_progress{
 	display: inline-block;
 }
 
-.contentRight{
+.block-information{
 	display: inline-block;
-	margin-left: 50px;
+	margin-left: 109px;
 }
 
 
-.experiens, 
-.reference,
-.languages,
-.education,
-.aboutMe,
-.interest,
-.skills{
+.buttons{
 	border-radius: 7px;
 	border;
-	background-color: #FFDEAD;
+	background-color: #e8c734;
 	display: inline-block;
 	padding: 5px 10px;
 	font-size: 20px;
 	margin-top:20px;
 	margin-bottom: 20px;
 
+}
+
+.block-text{
+    margin-bottom: 25px;
+}
+
+.block-date{
+    margin-bottom: 20px;
+    color:#a0a1a4;
+    
+}
+
+.block-contacts{
+    color:#d5d6d7;
 }
